--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,15 @@
     <title>Battleship</title>
   </head>
   <body>
-    <h1>TESTING</h1>
+    <div class="gameBoards">
+      <div class="player1-section">
+        <h1 id="player1-name"></h1>
+        <div id="content-player" class="grid-container"></div>
+      </div>
+      <div class="player2-section">
+        <h1 id="player2-name"></h1>
+        <div id="content-enemy" class="grid-container"></div>
+      </div>
+    </div>
   </body>
 </html>
