Finish basic game design and logic

--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
   <body>
     <h1>BATTLESHIP</h1>
     <div class="main-section">
-      <div class="message-log">
+      <div class="message-log" id="game-log">
         WELCOME TO BATTLESHIP! CLICK START GAME TO PLAY...
       </div>
       <div class="gameBoards">
