Finish reset btn functionality

--- a/src/template.html
+++ b/src/template.html
@@ -26,6 +26,9 @@
           <div id="content-enemy" class="grid-container"></div>
           <div class="button-section">
             <p id="player2-name"></p>
+            <div class="buttons">
+              <button id="reset-btn">Reset</button>
+            </div>
           </div>
         </div>
       </div>
